After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658019 - ffdec_ass: caps seems wrong
ffdec_ass: caps seems wrong
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
git master
Other Linux
: Normal minor
: 0.10.13
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-01 22:35 UTC by Nicolas Dufresne (ndufresne)
Modified: 2011-09-03 11:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Blacklist non-working subtitle decoders (1.25 KB, patch)
2011-09-02 20:30 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2011-09-01 22:35:14 UTC
ffdec_ass (a subtitle decoder) report decoding unknown/unknown to raw audio, which is most likely wrong, maybe a subject to blacklist in gst-ffmpeg ?
Comment 1 Nicolas Dufresne (ndufresne) 2011-09-01 22:38:25 UTC
Just noticed that we have the same situation for other subtitle decoders (ffdec_srt ffdec_pgssub ffdec_dvdsub ffdec_dvbsub).
Comment 2 David Schleef 2011-09-01 23:47:28 UTC
Blacklisting makes sense.  Feel free to create a patch.
Comment 3 Nicolas Dufresne (ndufresne) 2011-09-02 20:30:11 UTC
Created attachment 195528 [details] [review]
Blacklist non-working subtitle decoders

This include decoder for ASS, SRT, PGS, DVD and DVB. Those are generated
with bad capabilities and are not usable. Other elements exist to handle
those subtitle formats.
Comment 4 Tim-Philipp Müller 2011-09-03 11:40:28 UTC
Thanks!

commit eacf516f7f1f7a7332688364965b6a435e4e54b9
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Fri Sep 2 16:25:16 2011 -0400

    ffdec: Blacklist non-working subtitle decoders
    
    This include decoder for ASS, SRT, PGS, DVD and DVB. Those are generated
    with bad capabilities and are not usable in GStreamer. Other elements exist
    to handle those subtitle formats.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=658019